# fastapi_verification

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 09b951a2addb_add_user.py  1edf0a62e157_fix_in_contact.py  2302c649badc_init.py  4588e696edf8_init.py  4f328286677e_init.py  684c393c1c56_init.py  8be3438e24e1_init.py  c7e20ad1fb86_init.py  c9ff6c785063_add_column_confirmed_to_user.py
src/: schemas.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_reset_password.html
