[tool.poetry]
name = "fastapi-verification"
version = "0.1.0"
description = ""
authors = ["remmover <77463027+remmover@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "fastapi_verification" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.101.1" }
alembic = "^1.11.1"
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"
libgravatar = "^1.0.4"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
fastapi-mail = "^1.4.1"
redis = "4.6.0"
cloudinary = "^1.34.0"
fastapi-limiter = "^0.1.5"
setuptools = "^68.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
